// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should matches with closeButton snapshot 1`] = `
<div
  className="sc-bwzfXH bcFPKC k-Alert k-Alert--hasCloseButton"
  role="alert"
>
  <div
    className="k-Alert__text"
  >
    
    Alert !
  </div>
  <svg
    className="k-Alert__button k-u-reset-button"
    fill="none"
    height={12}
    onClick={[Function]}
    viewBox="0 0 17 18"
    width={12}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
      fill="#222"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`<Alert /> should matches with default snapshot 1`] = `
<div
  className="sc-bwzfXH bcFPKC k-Alert"
  role="alert"
>
  <div
    className="k-Alert__text"
  >
    
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with error snapshot 1`] = `
<div
  className="sc-bwzfXH bcFPKC k-Alert k-Alert--error"
  role="alert"
>
  <div
    className="k-Alert__text"
  >
    
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with success snapshot 1`] = `
<div
  className="sc-bwzfXH bcFPKC k-Alert k-Alert--success"
  role="alert"
>
  <div
    className="k-Alert__text"
  >
    
    Alert !
  </div>
</div>
`;

exports[`<Alert /> should matches with warning snapshot 1`] = `
<div
  className="sc-bwzfXH bcFPKC k-Alert k-Alert--warning"
  role="alert"
>
  <div
    className="k-Alert__text"
  >
    
    Alert !
  </div>
</div>
`;
